# cpp_protein_encoders

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: test_cpp_protein_encoders.yml
cpp_protein_encoders/: .encoders.py.swp  encoders.py
cpp_protein_tokenizers/: __init__.py  tokenizers.py
cpp_protein_tokenizers/cpp_ext/: basic_tokenizers.cpp  basic_tokenizers.h  cpp_protein_tokenizers_ext.cpp  subsmat_tokenizer.cpp  subsmat_tokenizer.h  utilities.cpp  utilities.h
tests/: .test_basic_tokenizers.py.swp  test_basic_tokenizers.py
